package it.unibo.wildenc.mvc.model;

public interface Enemy extends Entity {

    String getName();
    
}
