@startuml Domain

' =========================
'  Style
' =========================

skinparam shadowing false
skinparam roundcorner 5
skinparam dpi 150

skinparam DefaultFontName "Inter"
skinparam DefaultFontSize 12
skinparam classAttributeIconSize 0

skinparam class {
  BackgroundColor #F9F9F9
  BorderColor #BFBFBF
  FontColor #333333
}

skinparam Arrow {
  Color #9E9E9E
  Thickness 1
}

hide circle
hide empty members

' =========================
'  Classes
' =========================

class Map <<Interface>> {
  +addObject(obj : MapObject) : void
  +removeObject(obj : MapObject) : boolean
  +getAllObjects() : List<MapObject>
}

class MapObject <<Interface>> {
  +getPosition() : Vector2d<
  +getHitbox() : double
}

class Collectible <<Interface>> {
  +getValue() : int
}

class Movable <<Interface>> {
  +updatePosition(long deltaTime) : boolean
}

class Entity <<Interface>> {
  +getHealth() : int
  +takeDamage(dmg : int) : boolean
  +getWeapons() : List<Weapon>
}

class Player <<Interface>> {
  +levelUp() : void
  +getExp(exp : int) : void
  +setDirection(Vector2d d) : void
}

class Enemy <<Interface>> {
  +getName() : String
}

class Weapon <<Interface>> {
  +attack() : Projectile
  +isCooldown() : boolean
  +upgrade() : void
}

class Projectile <<Interface>> {
  +getDamage() : int
}

' =========================
'  Relations
' =========================

MapObject <|-- Collectible
MapObject <|-- Movable

Movable <|-- Entity
Movable <|-- Projectile

Entity <|-- Enemy
Entity <|-- Player

Entity *-- Weapon
Map *-- MapObject

Weapon ..> Projectile : <<create>>

@enduml
